# scout-

./: .clangd  .gitignore  BUG_REPORT.md  CHANGELOG.html  CMakeLists.txt  Makefile  README.md  RULES.md  RULES_IA.md  SCOUT_AUDIT_REPORT.txt  output.sexpr  scout_cpp  taint_report.html
.githooks/: pre-commit
build_release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_test_discovery_6aca88a0b7.json  cmake_test_discovery_8e27de0dcd.json  run_benchmarks  scout  test_cli_parser  test_cli_parser[1]_include.cmake  test_cli_parser[1]_tests.cmake  test_filesystem  test_filesystem[1]_include.cmake  test_filesystem[1]_tests.cmake  test_scanner  test_scanner[1]_include.cmake  test_scanner[1]_tests.cmake  test_smali_parser  test_smali_parser[1]_include.cmake  test_smali_parser[1]_tests.cmake  test_xref  test_xref[1]_include.cmake  test_xref[1]_tests.cmake
documentation/: architecture_map.md  architecture_map.txt
include/analysis/: xref.hpp
include/cli/: parser.hpp
include/core/: analysis_context.hpp  scanner.hpp  smali_parser.hpp
include/engines/: cfg_engine.hpp  class_inspector_engine.hpp  class_search_engine.hpp  content_search_engine.hpp  deobf_engine.hpp  engine_registry.hpp  i_search_engine.hpp  manifest_engine.hpp  register_engines.hpp  resource_mapping_engine.hpp  smali_dump_engine.hpp  ui_mapper_engine.hpp  variable_tracker_engine.hpp  xref_search_engine.hpp
include/engines/cfg/: cfg_engine.hpp
include/engines/class_inspector/: class_inspector_engine.hpp
include/engines/class_search/: class_search_engine.hpp
include/engines/content_search/: content_search_engine.hpp
include/engines/deobf/: deobf_engine.hpp
include/engines/manifest/: manifest_engine.hpp
include/engines/resource_mapping/: resource_mapping_engine.hpp
include/engines/smali_dump/: smali_dump_engine.hpp
include/engines/ui_mapper/: ui_mapper_engine.hpp
include/engines/variable_tracker/: variable_tracker_engine.hpp
include/engines/xref_search/: xref_search_engine.hpp
include/formatters/: formatter_registry.hpp  i_formatter.hpp  sexpr_formatter.hpp
include/utils/: filesystem.hpp  mmap_file.hpp  progress_reporter.hpp  sexpr.hpp  string_utils.hpp
scratch/: diag_cfg  diag_cfg.cpp
scripts/: generate_rules_sexpr.py  sexpr.py  taint_report.py
src/: main.cpp
src/engines/: cfg_engine.cpp  class_inspector_engine.cpp  class_search_engine.cpp  content_search_engine.cpp  deobf_engine.cpp  dominator_analyzer.cpp  manifest_engine.cpp  register_engines.cpp  resource_mapping_engine.cpp  smali_dump_engine.cpp  ui_mapper_engine.cpp  variable_tracker_engine.cpp  xref_search_engine.cpp
src/engines/cfg/: cfg_engine.cpp  dominator_analyzer.cpp
src/engines/class_inspector/: class_inspector_engine.cpp
src/engines/class_search/: class_search_engine.cpp
src/engines/content_search/: content_search_engine.cpp
src/engines/deobf/: deobf_engine.cpp
src/engines/manifest/: manifest_engine.cpp
src/engines/resource_mapping/: resource_mapping_engine.cpp
src/engines/smali_dump/: smali_dump_engine.cpp
src/engines/ui_mapper/: ui_mapper_engine.cpp
src/engines/variable_tracker/: variable_tracker_engine.cpp
src/engines/xref_search/: xref_search_engine.cpp
src/formatters/: sexpr_formatter.cpp
src/utils/: progress_reporter.cpp
tests/: CMakeLists.txt  benchmark.cpp  test_batch_massive.cpp  test_brain_massive.cpp  test_cfg_enhanced.cpp  test_cfg_massive.cpp  test_class_inspector_massive.cpp  test_class_search_engine.cpp  test_class_search_massive.cpp  test_cli_massive.cpp  test_cli_parser.cpp  test_constant_search.cpp  test_content_search_engine.cpp  test_data_flow.cpp  test_deobf_massive.cpp  test_filesystem.cpp  test_level16_forensics.cpp  test_manifest_massive.cpp  test_mmap_file.cpp  test_new_engines.cpp  test_obfuscation_engine.cpp  test_progress_reporter.cpp  test_res_map_massive.cpp  test_scanner.cpp  test_search_massive.cpp  test_sexpr.cpp  test_sexpr_edge.cpp  test_sexpr_massive.cpp  test_smali_dump.cpp  test_smali_parser.cpp  test_translator.cpp  test_ui_mapper_massive.cpp  test_variable_tracker.cpp  test_variable_tracker_massive.cpp  test_xref.cpp  test_xref_advanced.cpp  test_xref_massive.cpp  test_xref_search_engine.cpp
tests/audit/: SUPER_AUDIT_REPORT.md  test_analysis_context.cpp  test_bug_manifest_fragile.cpp  test_bug_operand_comment.cpp  test_bug_sig_collision.cpp  test_cfg_engine.cpp  test_chaos_edge.cpp  test_class_search.cpp  test_cli_parser.cpp  test_content_search.cpp  test_ctx_indexer.cpp  test_deobf_engine.cpp  test_filesystem.cpp  test_formatter_registry.cpp  test_manifest_engine.cpp  test_scanner.cpp  test_sexpr.cpp  test_sexpr_formatter.cpp  test_string_utils.cpp  test_var_tracker_atoms.cpp  test_var_tracker_flow.cpp  test_xref_search.cpp
var_audit_root_fixed/smali/: App.smali
